[project]
name = "lattice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Glitched Nexus", email = "143273662+GlitchedNexus@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pytest>=9.0.2",
    "statistics>=1.0.3.5",
]

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"
